# shape_area

./: README.md  pyproject.toml
geometry/: __init__.py  exceptions.py
geometry/calculators/: __init__.py  area_calculator.py
geometry/shapes/: base.py  circle.py  triangle.py
tests/: test_area_calculator.py  test_circle.py  test_triangle.py
